--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   , "version": "0.0.1"
   , "private": true
   , "engines": {
-    "node": "0.8.x",
-    "npm": "1.1.x"
+    "node": "0.10.x",
+    "npm": "1.3.x"
   }
   , "dependencies": {
-      "express": "latest",
-      "socket.io": ">= 0.9.6"
+      "express": "~3.5",
+      "socket.io": ">= 0.9.6",
+      "ejs": "latest"
   }
 }
