--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   , "dependencies": {
       "express": "~3.5",
       "socket.io": ">= 0.9.6",
-      "ejs": "latest"
+      "mongoose": "latest"
   }
 }
